--- a/Templates/AppSource App/.github/workflows/NextMajor.yaml
+++ b/Templates/AppSource App/.github/workflows/NextMajor.yaml
@@ -72,6 +72,8 @@ jobs:
     steps:
       - name: Build Project
         uses: mazhelez/AL-Go-Actions/BuildALGoProject@extract-build-project-action
+        env:
+          secrets: ${{ toJson(secrets) }}
         with:
           shell: ${{ needs.Initialization.outputs.githubRunnerShell }}
           parentTelemetryScopeJson: ${{ needs.Initialization.outputs.telemetryScopeJson }}
