--- a/Actions/BuildALGoProject/action.yaml
+++ b/Actions/BuildALGoProject/action.yaml
@@ -57,7 +57,6 @@ runs:
           path: '.dependencies'
 
       - name: Read settings
-        id: readsettings
         uses: microsoft/AL-Go-Actions/ReadSettings@main
         with:
           shell: ${{ inputs.shell }}
@@ -66,10 +65,12 @@ runs:
 
       - name: Read secrets
         uses: microsoft/AL-Go-Actions/ReadSecrets@main
+        env:
+          secrets: ${{ toJson(secrets) }}
         with:
           shell: ${{ inputs.shell }}
           parentTelemetryScopeJson: ${{ inputs.parentTelemetryScopeJson }}
-          settingsJson: ${{ steps.readsettings.SettingsJson }}
+          settingsJson: ${{ env.Settings }}
           secrets: 'licenseFileUrl,insiderSasToken,codeSignCertificateUrl,codeSignCertificatePassword,keyVaultCertificateUrl,keyVaultCertificatePassword,keyVaultClientId,storageContext,gitHubPackagesContext'
 
       - name: Determine ArtifactUrl
@@ -78,7 +79,7 @@ runs:
         with:
           shell: ${{ inputs.shell }}
           parentTelemetryScopeJson: ${{ inputs.parentTelemetryScopeJson }}
-          settingsJson: ${{ steps.readsettings.SettingsJson }}
+          settingsJson: ${{ env.Settings }}
           secretsJson: ${{ env.RepoSecrets }}
 
       - name: Cache Business Central Artifacts
@@ -98,7 +99,7 @@ runs:
           parentTelemetryScopeJson: ${{ inputs.parentTelemetryScopeJson }}
           project: ${{ inputs.project }}
           projectDependenciesJson: ${{ inputs.projectDependenciesJson }}
-          settingsJson: ${{ steps.readsettings.SettingsJson }}
+          settingsJson: ${{ env.Settings }}
           secretsJson: ${{ env.RepoSecrets }}
           buildMode: ${{ inputs.buildMode }}
 
@@ -108,7 +109,7 @@ runs:
         if: success() || failure()
         with:
           shell: ${{ inputs.shell }}
-          settingsJson: ${{ steps.readsettings.SettingsJson }}
+          settingsJson: ${{ env.Settings }}
           project: ${{ inputs.project }}
           buildMode: ${{ inputs.buildMode }}
           branchName: ${{ github.ref_name }}
