Upload this build artifacts

--- a/.github/workflows/BuildALGoProject.yaml
+++ b/.github/workflows/BuildALGoProject.yaml
@@ -26,6 +26,11 @@ on:
         required: false
         default: ''
         type: string
+      publishThisBuildArtifacts:
+        description: Flag indicating whether this build artifacts should be published
+        required: false
+        default: false
+        type: boolean
       publishArtifacts:
         description: Flag indicating whether the artifacts should be published
         required: false
@@ -46,7 +51,7 @@ jobs:
             lfs: true
       
         - name: Download thisbuild artifacts
-          if: env.workflowDepth > 1
+          if: inputs.publishThisBuildArtifacts
           uses: actions/download-artifact@v3
           with:
             path: '.dependencies'
@@ -110,7 +115,7 @@ jobs:
             branchName: ${{ github.ref_name }}
 
         - name: Upload thisbuild artifacts - apps
-          if: env.workflowDepth > 1
+          if: inputs.publishThisBuildArtifacts
           uses: actions/upload-artifact@v3
           with:
             name: ${{ steps.calculateArtifactsNames.outputs.ThisBuildAppsArtifactsName }}
@@ -119,7 +124,7 @@ jobs:
             retention-days: 1
 
         - name: Upload thisbuild artifacts - test apps
-          if: env.workflowDepth > 1
+          if: inputs.publishThisBuildArtifacts
           uses: actions/upload-artifact@v3
           with:
             name: ${{ steps.calculateArtifactsNames.outputs.ThisBuildTestAppsArtifactsName }}
