--- a/.github/workflows/Deploy.yaml
+++ b/.github/workflows/Deploy.yaml
@@ -1,5 +1,7 @@
 name: Deploy
 
+run-name: "Deploy from [${{ github.ref_name }}] to [${{ inputs.branch }}]"
+
 on:
   workflow_dispatch:
     inputs:
