--- a/.github/workflows/BuildALGoProject.yaml
+++ b/.github/workflows/BuildALGoProject.yaml
@@ -12,8 +12,7 @@ on:
         type: string
       runsOn: 
         description: The type of machine to run the build job on
-        required: false
-        default: 'windows-latest'
+        required: true
         type: string
       project:
         description: Name of the built project
