--- a/.github/workflows/BuildALGoProject.yaml
+++ b/.github/workflows/BuildALGoProject.yaml
@@ -49,7 +49,7 @@ on:
 
 jobs:
   BuildALGoProject:
-    runs-on: ${{ inputs.runsOn }}
+    runs-on: '${{ inputs.runsOn }}'
     steps:
         - name: Checkout
           uses: actions/checkout@v3
