--- a/.github/workflows/BuildALGoProject.yaml
+++ b/.github/workflows/BuildALGoProject.yaml
@@ -12,7 +12,8 @@ on:
         type: string
       runsOn: 
         description: The type of machine to run the build job on
-        required: true
+        required: false
+        default: windows-latest
         type: string
       project:
         description: Name of the built project
@@ -49,7 +50,7 @@ on:
 
 jobs:
   BuildALGoProject:
-    runs-on: '${{ inputs.runsOn }}'
+    runs-on: ${{ inputs.runsOn }}
     steps:
         - name: Checkout
           uses: actions/checkout@v3
