--- a/.github/workflows/BuildALGoProject.yaml
+++ b/.github/workflows/BuildALGoProject.yaml
@@ -49,7 +49,7 @@ on:
 
 jobs:
   BuildALGoProject:
-    runs-on: ${{ fromJson(needgithubRunners.Initialization.outputs.githubRunner) }}
+    runs-on: ${{ fromJson(inputs.githubRunner) }}
 
     steps:
         - name: Checkout
