--- a/.github/workflows/BuildALGoProject.yaml
+++ b/.github/workflows/BuildALGoProject.yaml
@@ -11,7 +11,7 @@ on:
         default: powershell
         type: string
       runsOn: 
-        description: The type of machine to run the build job on
+        description: JSON-formatted string og the types of machine to run the build job on
         required: true
         type: string
       project:
