--- a/.github/workflows/Deploy.yaml
+++ b/.github/workflows/Deploy.yaml
@@ -38,8 +38,7 @@ jobs:
 
       - name: Deploy
         run: |
-          $ErrorActionPreference = "Stop"
-          Set-StrictMode -Version 2.0
+          $errorActionPreference = "Stop"; $ProgressPreference = "SilentlyContinue"; Set-StrictMode -Version 2.0
           try {
             $token = '${{ Secrets.OrgPAT }}'
             if (!$token) {
