--- a/Actions/.github/workflows/BuildALGoProject.yaml
+++ b/Actions/.github/workflows/BuildALGoProject.yaml
@@ -55,6 +55,7 @@ jobs:
         - name: Checkout
           uses: actions/checkout@v3
           with:
+            ref: ${{ github.ref }}
             lfs: true
       
         - name: Download thisbuild artifacts
