--- a/Actions/.github/workflows/BuildALGoProject.yaml
+++ b/Actions/.github/workflows/BuildALGoProject.yaml
@@ -87,7 +87,7 @@ jobs:
           with:
             shell: ${{ inputs.shell }}
             parentTelemetryScopeJson: ${{ inputs.parentTelemetryScopeJson }}
-            project: ${{ matrix.project }}
+            project: ${{ inputs.project }}
             settingsJson: ${{ env.Settings }}
             secretsJson: ${{ env.RepoSecrets }}
 
@@ -146,7 +146,7 @@ jobs:
           if: inputs.publishArtifacts
           with:
             name: ${{ env.AppsArtifactsName }}
-            path: '${{ matrix.project }}/.buildartifacts/Apps/'
+            path: '${{ inputs.project }}/.buildartifacts/Apps/'
             if-no-files-found: ignore
 
         - name: Publish artifacts - dependencies
@@ -154,7 +154,7 @@ jobs:
           if: inputs.publishArtifacts
           with:
             name: ${{ env.DependenciesArtifactsName }}
-            path: '${{ matrix.project }}/.buildartifacts/Dependencies/'
+            path: '${{ inputs.project }}/.buildartifacts/Dependencies/'
             if-no-files-found: ignore
 
         - name: Publish artifacts - test apps
@@ -162,7 +162,7 @@ jobs:
           if: inputs.publishArtifacts
           with:
             name: ${{ env.TestAppsArtifactsName }}
-            path: '${{ matrix.project }}/.buildartifacts/TestApps/'
+            path: '${{ inputs.project }}/.buildartifacts/TestApps/'
             if-no-files-found: ignore
 
         - name: Publish artifacts - build output
