--- a/Actions/.github/workflows/BuildALGoProject.yaml
+++ b/Actions/.github/workflows/BuildALGoProject.yaml
@@ -46,6 +46,9 @@ on:
         description: Specifies the telemetry scope for the telemetry signal
         required: false
         type: string
+    secrets:
+      insiderSasToken:
+        required: true
 
 jobs:
   BuildALGoProject:
