--- a/Actions/.github/workflows/BuildALGoProject.yaml
+++ b/Actions/.github/workflows/BuildALGoProject.yaml
@@ -52,8 +52,8 @@ on:
 
 jobs:
   BuildALGoProject:
+    name: 'Build project ${{ inputs.project }} in ${{ inputs.buildMode }} mode'
     runs-on: ${{ fromJson(inputs.runsOn) }}
-
     steps:
         - name: Checkout
           uses: actions/checkout@v3
