--- a/Templates/Per Tenant Extension/.github/workflows/CICD.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/CICD.yaml
@@ -183,7 +183,16 @@ jobs:
       fail-fast: false
     name: Build ${{ matrix.project }} - ${{ matrix.buildMode }}
     uses: mazhelez/AL-Go-Actions/.github/workflows/BuildALGoProject.yaml@extract-build-project-action
-    secrets: inherit
+    secrets:
+      licenseFileUrl: ${{ secrets.licenseFileUrl }}
+      insiderSasToken: ${{ secrets.insiderSasToken }}
+      codeSignCertificateUrl: ${{ secrets.codeSignCertificateUrl }}
+      codeSignCertificatePassword: ${{ secrets.codeSignCertificatePassword }}
+      keyVaultCertificateUrl: ${{ secrets.keyVaultCertificateUrl }}
+      keyVaultCertificatePassword: ${{ secrets.keyVaultCertificatePassword }}
+      keyVaultClientId: ${{ secrets.keyVaultClientId }}
+      storageContext: ${{ secrets.storageContext }}
+      gitHubPackagesContext: ${{ secrets.gitHubPackagesContext }}
     with:
       shell: ${{ needs.Initialization.outputs.githubRunnerShell }}
       runsOn: ${{ needs.Initialization.outputs.githubRunner }}
@@ -191,7 +200,6 @@ jobs:
       project: ${{ matrix.project }}
       buildMode: ${{ matrix.buildMode }}
       projectDependenciesJson: ${{ needs.Initialization.outputs.projectDependenciesJson }}
-      secrets: 'licenseFileUrl,insiderSasToken,codeSignCertificateUrl,codeSignCertificatePassword,keyVaultCertificateUrl,keyVaultCertificatePassword,keyVaultClientId,storageContext,gitHubPackagesContext'
       publishThisBuildArtifacts: ${{ needs.Initialization.outputs.workflowDepth > 1 }}
       publishArtifacts: ${{ github.ref_name == 'main' || startswith(github.ref_name, 'release/') || needs.Initialization.outputs.deliveryTargetCount > 0 || needs.Initialization.outputs.environmentCount > 0 }}
 
