--- a/Templates/Per Tenant Extension/.github/workflows/NextMajor.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/NextMajor.yaml
@@ -68,7 +68,15 @@ jobs:
       fail-fast: false
     name: Build ${{ matrix.project }} - ${{ matrix.buildMode }}
     uses: mazhelez/AL-Go-Actions/.github/workflows/BuildALGoProject.yaml@extract-build-project-action
-    secrets: inherit
+    secrets:
+      licenseFileUrl: ${{ secrets.licenseFileUrl }}
+      insiderSasToken: ${{ secrets.insiderSasToken }}
+      codeSignCertificateUrl: ${{ secrets.codeSignCertificateUrl }}
+      codeSignCertificatePassword: ${{ secrets.codeSignCertificatePassword }}
+      keyVaultCertificateUrl: ${{ secrets.keyVaultCertificateUrl }}
+      keyVaultCertificatePassword: ${{ secrets.keyVaultCertificatePassword }}
+      keyVaultClientId: ${{ secrets.keyVaultClientId }}
+      gitHubPackagesContext: ${{ secrets.gitHubPackagesContext }}
     with:
       shell: ${{ needs.Initialization.outputs.githubRunnerShell }}
       runsOn: ${{ needs.Initialization.outputs.githubRunner }}
@@ -76,7 +84,6 @@ jobs:
       project: ${{ matrix.project }}
       buildMode: ${{ matrix.buildMode }}
       projectDependenciesJson: ${{ needs.Initialization.outputs.projectDependenciesJson }}
-      secrets: 'licenseFileUrl,insiderSasToken,codeSignCertificateUrl,codeSignCertificatePassword,keyVaultCertificateUrl,keyVaultCertificatePassword,keyVaultClientId,gitHubPackagesContext'
       publishThisBuildArtifacts: ${{ needs.Initialization.outputs.workflowDepth > 1 }}
 
   PostProcess:
