Hardcode secrets to be read by ReadSecrets

--- a/Actions/.github/workflows/BuildALGoProject.yaml
+++ b/Actions/.github/workflows/BuildALGoProject.yaml
@@ -27,11 +27,6 @@ on:
         description: Build mode used when building the artifacts
         required: true
         type: string
-      secrets:
-        description: A comma-separated string with the names of the secrets, required for the workflow.
-        required: false
-        default: ''
-        type: string
       publishThisBuildArtifacts:
         description: Flag indicating whether this build artifacts should be published
         required: false
@@ -65,7 +60,6 @@ on:
         required: false
       gitHubPackagesContext:
         required: false
-
 jobs:
   BuildALGoProject:
     runs-on: ${{ fromJson(inputs.runsOn) }}
@@ -97,7 +91,7 @@ jobs:
             shell: ${{ inputs.shell }}
             parentTelemetryScopeJson: ${{ inputs.parentTelemetryScopeJson }}
             settingsJson: ${{ env.Settings }}
-            secrets: ${{ inputs.secrets }}
+            secrets: 'licenseFileUrl,insiderSasToken,codeSignCertificateUrl,codeSignCertificatePassword,keyVaultCertificateUrl,keyVaultCertificatePassword,keyVaultClientId,storageContext,gitHubPackagesContext'
 
         - name: Determine ArtifactUrl
           uses: mazhelez/AL-Go-Actions/DetermineArtifactUrl@main
