Revert "Hardcode secrets usage in the reusable workflow"
This reverts commit b74d28dbe7c8e52c5c275f32bc7cc1eac8919c41.

--- a/Actions/.github/workflows/BuildALGoProject.yaml
+++ b/Actions/.github/workflows/BuildALGoProject.yaml
@@ -42,24 +42,8 @@ on:
         required: false
         type: string
     secrets:
-      licenseFileUrl:
-        required: false
       insiderSasToken:
-        required: false
-      codeSignCertificateUrl:
-        required: false
-      codeSignCertificatePassword:
-        required: false
-      keyVaultCertificateUrl: 
-        required: false
-      keyVaultCertificatePassword:
-        required: false
-      keyVaultClientId:
-        required: false
-      storageContext:
-        required: false
-      gitHubPackagesContext:
-        required: false
+        required: true
 jobs:
   BuildALGoProject:
     runs-on: ${{ fromJson(inputs.runsOn) }}
