--- a/Actions/PullPowerPlatformChanges/action.yaml
+++ b/Actions/PullPowerPlatformChanges/action.yaml
@@ -38,7 +38,7 @@ runs:
   using: composite
   steps:
       - name: Parse DeployToSettings and AuthContext
-        uses: microsoft/AL-Go-Actions/ReadPowerPlatformSettings@main
+        uses: microsoft/AL-Go-Actions/ReadPowerPlatformSettings@PPPreview
         with:
           shell: ${{ inputs.shell }}
           parentTelemetryScopeJson: ${{inputs.parentTelemetryScopeJson}}
@@ -46,12 +46,12 @@ runs:
           authSettings: ${{ inputs.authSettings }}
 
       - name: Who am I (username)
-        if: ${{ env.userName != '' }}
+        if: ${{ env.ppUserName != '' }}
         uses: microsoft/powerplatform-actions/who-am-i@v0
         with:
           environment-url: ${{env.ppEnvironmentUrl}}
-          user-name: ${{env.userName}}
-          password-secret: ${{env.password}}
+          user-name: ${{env.ppUserName}}
+          password-secret: ${{env.ppPassword}}
 
       - name: Who am I (application ID)
         if: ${{ env.ppApplicationId != '' }}
@@ -72,11 +72,11 @@ runs:
         run: ${{ github.action_path }}\GitCloneReponsitory.ps1 -Actor $ENV:_actor -Token $ENV:_token -ParentTelemetryScopeJson $ENV:_parentTelemetryScopeJson -DirectCommit $ENV:_directCommit
 
       - name: export-solution action (username)
-        if: ${{ env.userName != '' }}
+        if: ${{ env.ppUserName != '' }}
         uses: microsoft/powerplatform-actions/export-solution@v0
         with:
-          user-name: ${{env.userName}}
-          password-secret: ${{env.password}}
+          user-name: ${{env.ppUserName}}
+          password-secret: ${{env.ppPassword}}
           environment-url: ${{env.ppEnvironmentUrl}}
           solution-name: ${{inputs.solutionName}}
           solution-output-file: ${{env.clonedRepoPath}}/${{inputs.solutionName}}.zip
