--- a/Actions/Sign/action.yaml
+++ b/Actions/Sign/action.yaml
@@ -5,7 +5,7 @@ inputs:
     description: Shell in which you want to run the action (powershell or pwsh)
     required: false
     default: powershell
-  azureKeyVaultURI:
+  azureKeyVaultName:
     description: URI of the Azure Key Vault
     required: true
   azureKeyVaultClientID:
@@ -43,7 +43,7 @@ runs:
       id: Sign
       run: | 
         try { 
-          ${{ github.action_path }}/Sign.ps1 -AzureKeyVaultURI "${{ inputs.azureKeyVaultURI }}" `
+          ${{ github.action_path }}/Sign.ps1 -AzureKeyVaultName "${{ inputs.azureKeyVaultName }}" `
                                       -AzureKeyVaultClientID "${{ inputs.azureKeyVaultClientID }}" `
                                       -AzureKeyVaultClientSecret "${{ inputs.azureKeyVaultClientSecret }}" `
                                       -AzureKeyVaultTenantID "${{ inputs.azureKeyVaultTenantID }}" `
